Fixed not being able to scroll on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@ html {
 body {
   padding: 2rem;
   overflow: hidden;
-  min-height: 100vh;
+  min-height: 100%;
   text-align: center;
   background: linear-gradient(150deg, hsl(0, 0%, 100%) 0%, hsl(210, 90%, 60%) 100%);
   display: flex;
